chore(gitignore): modified gitignore to exclude pods SUITEDEV-29431
Co-authored-by: LasOri <24588073+LasOri@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ fastlane/test_output
 
 iOSInjectionProject/
 /.idea/*
+/Pods/
+/Podfile.lock
+/ios-emarsys-sdk-swift.xcworkspace/xcshareddata/
+/ios-emarsys-sdk-swift.xcworkspace/contents.xcworkspacedata
